@@ -1,9 +1,7 @@
 package sp.it.util;
 
-import java.io.UnsupportedEncodingException;
+import java.net.URLDecoder;
 import java.net.URLEncoder;
-import java.nio.charset.Charset;
-import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
@@ -18,6 +16,7 @@ import static java.lang.Math.min;
 import static java.lang.Math.pow;
 import static java.lang.Math.random;
 import static java.lang.Math.sqrt;
+import static java.nio.charset.StandardCharsets.UTF_8;
 import static java.util.stream.Collectors.toCollection;
 import static sp.it.util.Util.StringDirection.FROM_START;
 import static sp.it.util.dev.FailKt.failIf;
@@ -198,17 +197,17 @@ public interface Util {
 	}
 
 	/**
-	 * Invokes {@link java.net.URLEncoder#encode(String, String)} with {@link java.nio.charset.StandardCharsets#UTF_8}
-	 * .
+	 * Invokes {@link java.net.URLEncoder#encode(String, String)} with {@link java.nio.charset.StandardCharsets#UTF_8}.
+	 * UTF-8 is url encoding recommended encoding.
 	 */
 	static String urlEncodeUtf8(String s) {
-		Charset charset = StandardCharsets.UTF_8; // UTF-8 is url encoding recommended encoding
-		try {
-			return URLEncoder.encode(s, charset.name());
-		} catch (UnsupportedEncodingException e) {
-			// will never happen as UTF-8 is guaranteed to be available on every platform
-			throw new AssertionError("Can't url encode string '" + s + "'. Charset " + charset + " not available.");
-		}
+		return URLEncoder.encode(s, UTF_8);
+	}
+	/**
+	 * UTF-8 is url encoding recommended encoding.
+	 */
+	static String urlDecodeUtf8(String s) {
+		return URLDecoder.decode(s, UTF_8);
 	}
 
 	/**
